	KozaStatistics.java and SimpleStatistics.java now call describe() on the
		individual regardless during finalStatistics
	NON-backward-compatible modification to SimpleProblemForm and
		GroupedProblemForm: added the subpopulation number(s) as an argument
		to the evaluate and describe functions.  This is intended to
		alleviate some nasty hacks in the distributed evaluator.  We had
		tried to avoid doing it but just can't. You'll have to add that
		argument (it's easy though) to get your code to compile again.
	PseudoRoundRobin removed from CompetitiveEvaluator, it wasn't finished.
	Revamping of Slave code
	Added the NK, SAT, and HIFF problems
	Changed LinkedHashSet to HashSet in ParameterDatabase to conform with JDK 1.3
	Added 'auto' as an option for the breed and eval threads.  This doesn't work
		right with the Console though, so for now it'll only be a
		command-line option.
	Added compression options back into the island model and distributed
		evaluator.  We've abandoned Sun's broken zlib code and have instead
		gone with JZlib (http://www.jcraft.com/jzlib/).  So as not to make
		ECJ reliant on JZlib for compiling, we're setting up the streams
		dynamically using reflection in two new static methods in Output
		(makeCompressedInputStream, makeCompressedOutputStream).
		ec.util.CompressingInputStream and ec.util.CompressingOutputStream
		are hereby deleted.
	Updated ERC.java to be a bit easier to implement, and with better docs.
	Subpopulation now has a default base:  ec.subpop   This marks the first
		actual use of the ECDefaults class.  Population doesn't have one
		yet, making it the only Group without one.  Because it'd be
		sort of a bit silly I guess, saying 'ec.pop...' instead of 'pop...'
	Species wasn't including the default base for loading the Fitness.  Fixed.
		Thanks to Peter Drake <drake@lclark.edu>
	Tweak to Console to fix parameters not being updated properly.  Thanks to
		Bob Orchard <Bob.Orchard@nrc-cnrc.gc.ca>