@@ -6,7 +6,7 @@
 
 <h1>About Parameters and Parameter Files</h1>
 
-<p>ECJ relies heavily on parameter files for nearly <i>every</i> conceivable parameter setting.  It even relies on parameter files to determine which classes to use in diffent places.  This means that understanding parameters and parameter files is crucial to using ECJ.
+<p>ECJ relies heavily on parameter files for nearly <i>every</i> conceivable parameter setting.  It even relies on parameter files to determine which classes to use in different places.  This means that understanding parameters and parameter files is crucial to using ECJ.
 
 
 <h3>Parameters</h3>
@@ -78,7 +78,7 @@ If you have two parameters with the same name, here are the rules guiding which 
   <li>Next come parameters in the specified parameter file.
   <li>Within a file, later parameters override earlier ones.
   <li>Child parameter files' parameters override their parents' or ancestors' parameters.
-  <li>If a file has parents <i>parent.m</i> and <i>parent.m</i>, then all parameters derived from <i>parent.n</i> and its ancestors override all parameters  derived from <i>parent.m</i> and its ancestors if <i>n</i> is less than <i>m</i>.
+  <li>If a file has parents <i>parent.n</i> and <i>parent.m</i>, then all parameters derived from <i>parent.n</i> and its ancestors override all parameters  derived from <i>parent.m</i> and its ancestors if <i>n</i> is less than <i>m</i>.
 </ul>
 
 <h3>ECJ's Parameter Style</h3>
