@@ -66,14 +66,8 @@
 # ec.Evolve
 # ==============================
 
-# we want store announcements in memory, so...
-store = 				true
-
 # totally verbose
 verbosity = 				0
-
-# flush output immediately, don't buffer it
-flush = 				true
 
 # one thread
 evalthreads = 				1
